--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,83 @@
 @import url('https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Acme&display=swap');
 
 body {
     /*background-color: red;*/
+    
 }
+
+#DivBannerMain
+{
+    position: relative;
+    left: -8px;
+    top: -16px;
+    width: 100vw;
+    background: url('../img/test4.jpg') no-repeat center center fixed;
+    background-size: cover;
+    height: 100vh;
+}
+
+    #DivBannerMain h1 {
+        position: relative;
+        left: 42%;
+        top: 20%;
+        /*color: #DBB13B;*/
+        color: #FFECC2;
+        /*color: rgba(0,0,0,0);*/
+        /*-webkit-text-stroke: 0.2px black;*/
+        padding: 10px;
+        width: 180px;
+        font-family: 'Acme', sans-serif;
+        border: solid 3px rgba(255,255,255,.4);
+        border-top-right-radius: 20px;
+        border-bottom-left-radius: 20px;
+        background-color: rgba(0,0,0,.4);
+        /*border-top-right-radius: 10px;*/
+    }
+
+    #DivBannerMain button
+    {
+        position: relative;
+        top: 150px;
+        left: 44%;
+        background-color: rgba(0,0,0,.1);    
+        border: solid 1px white;
+        padding: 12pt;
+        height: 65px;
+        width: auto;
+        font-family: 'Open Sans', sans-serif;
+        color: white;
+        font-size: 18pt;
+        text-align: center;
+        transition: all 300ms;
+    }
+
+    #DivBannerMain .fa-caret-right {
+        position: relative;
+        top: 7px;
+        left: 10px;
+        transition: all 300ms;
+    }
+
+    #DivBannerMain button:hover .fa-caret-right {
+        transform: rotate(90deg);
+    }
+
+
+    #DivBannerMain button:hover
+    {
+        height: 80px;
+        /*padding: 20pt;*/
+    }
 
 nav {
     position: relative;
-    background-color: #0A0E29;
+    /*background-color: #0A0E29;*/
     height: 55px;
     z-index: 2;
     width: 100%;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
 }
 
 .navList {
@@ -24,7 +90,7 @@ nav {
     /*text-align: center;*/
     font-family: 'Bebas Neue', cursive;
     padding: 10px;
-    font-size: 24pt;
+    font-size: 14pt;
     color: white;
     transition: all 300ms;
 }
