--- a/css/styles.css
+++ b/css/styles.css
@@ -2,22 +2,15 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Acme&display=swap');
 
-html
-{
+html {
     scroll-behavior: smooth;
-    /*overflow: auto;*/
-}
-
-body {
-    /*background-color: red;*/
-    
 }
 
 #DivBannerMain {
     position: relative;
     left: -8px;
     top: -16px;
-    width: 100vw;
+    width: 99.5vw;
     background: url('../img/test3.jpg') no-repeat center center fixed;
     background-size: cover;
     height: 100vh;
@@ -28,10 +21,7 @@ body {
         position: relative;
         left: 42%;
         top: 20%;
-        /*color: #DBB13B;*/
         color: #FFECC2;
-        /*color: rgba(0,0,0,0);*/
-        /*-webkit-text-stroke: 0.2px black;*/
         padding: 10px;
         width: 180px;
         font-family: 'Acme', sans-serif;
@@ -39,15 +29,13 @@ body {
         border-top-right-radius: 20px;
         border-bottom-left-radius: 20px;
         background-color: rgba(0,0,0,.4);
-        /*border-top-right-radius: 10px;*/
     }
 
-    #DivBannerMain button
-    {
+    #DivBannerMain button {
         position: relative;
         top: 150px;
         left: 44%;
-        background-color: rgba(0,0,0,.2);    
+        background-color: rgba(0,0,0,.2);
         border: solid 1px white;
         padding: 12pt;
         height: 65px;
@@ -60,13 +48,9 @@ body {
         transition: all 300ms;
     }
 
-    #DivBannerMain button:hover
-    {
-        height: 80px;
-        /*width: 200px;*/
-        /*padding-right: 30px;*/
-        /*padding: 20pt;*/
-    }
+        #DivBannerMain button:hover {
+            height: 80px;
+        }
 
     #DivBannerMain .fa-caret-right {
         position: relative;
@@ -80,15 +64,13 @@ body {
     }
 
 
-    
+
 
 nav {
     position: relative;
-    /*background-color: #0A0E29;*/
     height: 55px;
     z-index: 2;
     width: 100%;
-    /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
 }
 
 .navList {
@@ -98,10 +80,9 @@ nav {
 
 .navItem {
     float: right;
-    /*text-align: center;*/
     font-family: 'Bebas Neue', cursive;
     padding: 10px;
-    font-size: 14pt;
+    font-size: 22pt;
     color: white;
     transition: all 300ms;
 }
@@ -112,17 +93,11 @@ nav {
 
 #ImgBanner {
     position: relative;
-    /*top: -10px;*/
-    /*border: solid 2px red;*/
     z-index: -1;
-    /*position: relative;
-    left: -8px;*/
-    /*float: left;*/
 }
 
 #bannerDiv {
     z-index: -1;
-    /*background-color: red;*/
     height: 50px;
 }
 
@@ -134,7 +109,6 @@ h1 {
 .dropbtn {
     background-color: rgba(0,0,0,0);
     color: white;
-    /*padding: 16px;*/
     font-size: 16px;
     border: none;
     transition: all 200ms;
@@ -143,7 +117,6 @@ h1 {
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
     position: relative;
-    /*display: inline-block;*/
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -155,26 +128,22 @@ h1 {
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
-.dropdown-content a {
-    color: white;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    transition: all 300ms;
-  }
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {
-    color: #DBB13B;
+
+    .dropdown-content a {
+        color: white;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+        transition: all 300ms;
     }
+        .dropdown-content a:hover {
+            color: #DBB13B;
+        }
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
-    /*text-align: center;*/
-    /*position: relative;*/
     display: block;
     float: right;
-    /*left: 225px;*/
-    /*top: 50px;*/
     background-color: #0A0E29;
     font-family: 'Bebas Neue', cursive;
     font-size: 18pt;
@@ -198,14 +167,12 @@ h1 {
     left: 0;
 }
 
-.fa-caret-right:hover
-{
-    position: relative;
-    left: 100px;
-}
+    .fa-caret-right:hover {
+        position: relative;
+        left: 100px;
+    }
 
-#AmOpt
-{
+#AmOpt {
     margin-left: 60pt;
 }
 
@@ -213,114 +180,92 @@ h1 {
     display: none;
     position: absolute;
     min-width: 160px;
-    /*width: 2120px;*/
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 3;
     background-color: red;
-
 }
 
 
-.subdropdown a {
-    color: white;
-    padding: 12px 16px;
-    text-decoration: none;
+    .subdropdown a {
+        color: white;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+        transition: all 300ms;
+    }
+
+#A:hover .subdropdown {
     display: block;
-    transition: all 300ms;
-}
-
-#A:hover .subdropdown
-{
-    display:block;
     z-index: 2;
     background-color: red;
 }
 
-#DivPaises
-{
+#DivPaises {
     width: 658.67px;
     height: 616.44px;
     background-color: rebeccapurple;
 }
 
-.ae flag
-{
+.ae flag {
     width: 900px;
     height: 900px;
 }
 
-#DivPaises i
-{
+#DivPaises i {
     border: solid 2px yellow;
     text-align: center;
 }
 
-.CountryHeader
-{
-    /*text-align: center;*/
+.CountryHeader {
     float: left;
 }
 
-#DivRutas
-{
+#DivRutas {
     overflow: auto;
-    /*background-color: red;*/
     height: 550px;
 }
 
-#RtAmrca
-{
+#RtAmrca {
     position: relative;
-    /*background-color: aqua;*/
     width: 650px;
     left: 25%;
     height: 360px;
     overflow: scroll;
 }
 
-#RtAmrca table
-{
-    overflow: scroll;
-    /*background-color: purple;*/
-    width: 50px;
-    height: 250px;
-}
+    #RtAmrca table {
+        overflow: scroll;
+        width: 50px;
+        height: 250px;
+    }
 
-#RtAmrca table th
-{
-    padding: 10px;
-    margin: 3px;
-    /*border: solid 1px red;*/
-    color: white;
-    font-family: 'Open Sans', sans-serif;
-}
+        #RtAmrca table th {
+            padding: 10px;
+            margin: 3px;
+            color: white;
+            font-family: 'Open Sans', sans-serif;
+        }
 
 
-#RtAmrca table td
-{
-    text-align: center;
-    font-family: 'Open Sans', sans-serif;
-    border: solid 1px black;
-}
+        #RtAmrca table td {
+            text-align: center;
+            font-family: 'Open Sans', sans-serif;
+            border: solid 1px black;
+        }
 
-#RtAmrca table tr:nth-child(odd)
-{
-    background-color: gray;
-}
+        #RtAmrca table tr:nth-child(odd) {
+            background-color: gray;
+        }
 
-#RtAmrca table th:nth-child(odd)
-{
+        #RtAmrca table th:nth-child(odd) {
+            background-color: #2D325A;
+        }
 
-    background-color: #2D325A;
-}
+        #RtAmrca table th:nth-child(even) {
+            background-color: #2494A2;
+        }
 
-#RtAmrca table th:nth-child(even)
-{
-    background-color: #2494A2;
-}
-
-.DivideSccn
-{
+.DivideSccn {
     background-color: green;
 }
 
@@ -333,8 +278,7 @@ h1 {
     text-align: center;
 }
 
-.HomeIcn
-{
+.HomeIcn {
     float: left;
 }
 
@@ -349,20 +293,17 @@ h1 {
     overflow: scroll;
 }
 
-#InfoDiv h1
-{
-    color: white;
-    font-family: 'Bebas Neue', cursive;
-}
+    #InfoDiv h1 {
+        color: white;
+        font-family: 'Bebas Neue', cursive;
+    }
 
-#InfoDiv h2
-{
-    text-align: center;
-    font-family: 'Open Sans', sans-serif;
-}
+    #InfoDiv h2 {
+        text-align: center;
+        font-family: 'Open Sans', sans-serif;
+    }
 
-#SecDiv
-{
+#SecDiv {
     background-color: #0D0E23;
     color: white;
     float: left;
@@ -372,21 +313,18 @@ h1 {
     height: 97vh;
 }
 
-.headerHR
-{
+.headerHR {
     border: solid 1px #DBB13B;
 }
 
-.AB
-{
+.AB {
     background-color: red;
     height: 175px;
 }
 
 
 
-#TercDiv
-{
+#TercDiv {
     background-color: #0D0E23;
     height: 100vh;
     width: 40%;
@@ -394,32 +332,26 @@ h1 {
     overflow: scroll;
 }
 
-.tooltip
-{
-  position: absolute;
-  bottom: 100%;  /* At the top of the tooltip */
-  left: 50%;
-  margin-left: -5px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: transparent transparent black transparent;
+.tooltip {
+    position: absolute;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent transparent black transparent;
 }
 
-#TercDiv h1
-{
+#TercDiv h1 {
     color: white;
     font-family: 'Open Sans', sans-serif;
 }
 
-#TercDiv h2
-{
+#TercDiv h2 {
     color: white;
     text-align: center;
 }
 
-#TercDiv img
-{
-    /*top: 10px;*/
+#TercDiv img {
     position: relative;
     top: 0px;
     width: 155px;
@@ -438,13 +370,11 @@ h1 {
     border-color: transparent transparent black transparent;
 }
 
-#TercDiv img:hover .tooltip
-{
+#TercDiv img:hover .tooltip {
     content: "sf";
 }
 
-#TercDiv img:hover
-{
+#TercDiv img:hover {
     position: relative;
     top: -5px;
 }
@@ -464,13 +394,99 @@ h1 {
     background: #999;
 }
 
-.container
-{
+.container {
     position: relative;
-    /*left: 1%;*/
     width: 1200px;
-    /*margin-right: -100px;*/
-    /*background-color: red;*/
     left: 10%;
     right: 25%;
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+    background-color: #303030;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #303030;
+    border: solid 1px #DBB13B;
+    border-radius: 10px;
+}
+
+    /* Handle on hover */
+    ::-webkit-scrollbar-thumb:hover {
+        background: #141414;
+    }
+
+.InfoContentDiv::-webkit-scrollbar {
+    background-color: rgba(0,0,0,0);
+}
+
+.InfoContentDiv::-webkit-scrollbar-track {
+    border: solid 0px red;
+    background-color: rgba(0,0,0,0);
+    box-shadow: inset 0 0 5px rgba(0,0,0,0);
+}
+
+.InfoContentDiv::-webkit-scrollbar-thumb {
+    background: rgba(0,0,0,0);
+    border: solid 0px red;
+}
+
+#DivAbtUs h1 {
+    font-family: 'Bebas Neue', cursive;
+}
+
+#DivAbtUs h3 {
+    text-align: center;
+    font-family: 'Open Sans', sans-serif;
+}
+
+#DivAbtUs {
+    position: relative;
+    left: -3px;
+    top: -180vh;
+    margin-bottom: -350px;
+    padding: 10px;
+    background-color: rgba(0,0,0,.5);
+    width: 99vw;
+    z-index: 3;
+    height: 100vh;
+    opacity: 0;
+    z-index: 1;
+}
+
+#DivAbtUs section
+{
+    position: relative;
+    padding: 10px;
+    left: 25%;
+    top: 150px;
+    width: 675px;
+    height: 300px;
+    background-color: white;
+}
+
+#DivAbtUs .fa-times
+{
+    float: right;
+    padding-right: 10px;
+}
+
+.hide {
+    position: relative;
+    top: -180vh;
+
+}
+
+a
+{
+    text-decoration: none;
 }
